@@ -20,6 +20,10 @@ public class StandardCommands {
         return instance;
     }
 
+    public RpcCall<BlockJson.Header> getLastHeader() {
+        return RpcCall.create(BlockJson.Header.class, PolkadotMethod.CHAIN_GET_HEADER);
+    }
+
     /**
      * Request for a block by its hash
      * @param hash hash of the block
@@ -118,6 +122,14 @@ public class StandardCommands {
     }
 
     /**
+     * Request runtime metadata of the current node
+     * @return command
+     */
+    public RpcCall<ByteData> stateMetadata(Hash256 hash) {
+        return RpcCall.create(ByteData.class, PolkadotMethod.STATE_GET_METADATA,hash);
+    }
+
+    /**
      * Request data from storage
      * @param key key (depending on the storage)
      * @return command
@@ -132,9 +144,9 @@ public class StandardCommands {
      * @param at block (optional)
      * @return command
      */
-    @Deprecated(forRemoval = true)
+    @Deprecated
     public RpcCall<Hash256> stateGetStorageHash(ByteData key, Hash256 at) {
-        List<Object> params = at == null ? List.of(key) : List.of(key, at);
+        List<Object> params = at == null ? Arrays.asList(key) : Arrays.asList(key, at);
         return RpcCall.create(Hash256.class, PolkadotMethod.STATE_GET_STORAGE_HASH, params);
     }
 
@@ -144,9 +156,9 @@ public class StandardCommands {
      * @param at block (optional)
      * @return command
      */
-    @Deprecated(forRemoval = true)
+    @Deprecated
     public RpcCall<Long> stateGetStorageSize(ByteData key, Hash256 at) {
-        List<Object> params = at == null ? List.of(key) : List.of(key, at);
+        List<Object> params = at == null ? Arrays.asList(key) : Arrays.asList(key, at);
         return RpcCall.create(Long.class, PolkadotMethod.STATE_GET_STORAGE_SIZE, params);
     }
 
@@ -157,9 +169,9 @@ public class StandardCommands {
      * @param at block (optional)
      * @return command
      */
-    @Deprecated(forRemoval = true)
+    @Deprecated
     public RpcCall<ByteData> stateCall(String method, ByteData data, Hash256 at) {
-        List<Object> params = at == null ? List.of(method, data) : List.of(method, data, at);
+        List<Object> params = at == null ? Arrays.asList(method, data) : Arrays.asList(method, data, at);
         return RpcCall.create(ByteData.class, PolkadotMethod.STATE_CALL, params);
     }
 
@@ -172,9 +184,9 @@ public class StandardCommands {
      * @param at block (optional)
      * @return command
      */
-    @Deprecated(forRemoval = true)
+    @Deprecated
     public RpcCall<List<ByteData>> stateGetChildKeys(ByteData childStorageKey, ByteData childDefinition, long childType, ByteData key, Hash256 at) {
-        List<Object> params = new ArrayList<>(List.of(childStorageKey, childDefinition, childType, key));
+        List<Object> params = new ArrayList<>(Arrays.asList(childStorageKey, childDefinition, childType, key));
         if (at != null) {
             params.add(at);
         }
@@ -190,9 +202,9 @@ public class StandardCommands {
      * @param at block (optional)
      * @return command
      */
-    @Deprecated(forRemoval = true)
+    @Deprecated
     public RpcCall<ByteData> stateGetStorageData(ByteData childStorageKey, ByteData childDefinition, long childType, ByteData key, Hash256 at) {
-        List<Object> params = new ArrayList<>(List.of(childStorageKey, childDefinition, childType, key));
+        List<Object> params = new ArrayList<>(Arrays.asList(childStorageKey, childDefinition, childType, key));
         if (at != null) {
             params.add(at);
         }
@@ -208,9 +220,9 @@ public class StandardCommands {
      * @param at block (optional)
      * @return command
      */
-    @Deprecated(forRemoval = true)
+    @Deprecated
     public RpcCall<Hash256> stateGetChildStorageHash(ByteData childStorageKey, ByteData childDefinition, long childType, ByteData key, Hash256 at) {
-        List<Object> params = new ArrayList<>(List.of(childStorageKey, childDefinition, childType, key));
+        List<Object> params = new ArrayList<>(Arrays.asList(childStorageKey, childDefinition, childType, key));
         if (at != null) {
             params.add(at);
         }
@@ -226,9 +238,9 @@ public class StandardCommands {
      * @param at block (optional)
      * @return command
      */
-    @Deprecated(forRemoval = true)
+    @Deprecated
     public RpcCall<Long> stateGetChildStorageSize(ByteData childStorageKey, ByteData childDefinition, long childType, ByteData key, Hash256 at) {
-        List<Object> params = new ArrayList<>(List.of(childStorageKey, childDefinition, childType, key));
+        List<Object> params = new ArrayList<>(Arrays.asList(childStorageKey, childDefinition, childType, key));
         if (at != null) {
             params.add(at);
         }
@@ -243,9 +255,9 @@ public class StandardCommands {
      * @param at block (optional)
      * @return command
      */
-    @Deprecated(forRemoval = true)
+    @Deprecated
     public RpcCall<List<ByteData>> stateGetKeys(ByteData key, int count, ByteData startKey, Hash256 at) {
-        List<Object> params = new ArrayList<>(List.of(key, count));
+        List<Object> params = new ArrayList<>(Arrays.asList(key, count));
         if (startKey != null) {
             params.add(startKey);
         }
@@ -256,7 +268,7 @@ public class StandardCommands {
     }
 
     public RpcCall<ReadProofJson> stateGetReadProof(List<ByteData> keys, Hash256 at) {
-        List<Object> params = new ArrayList<>(List.of(keys));
+        List<Object> params = new ArrayList<>(Arrays.asList(keys));
         if (at != null) {
             params.add(at);
         }
@@ -270,9 +282,9 @@ public class StandardCommands {
      * @param toBlock to block
      * @return command
      */
-    @Deprecated(forRemoval = true)
+    @Deprecated
     public RpcCall<List<ByteData>> stateQueryStorage(List<ByteData> keys, Hash256 fromBlock, Hash256 toBlock) {
-        List<Object> params = new ArrayList<>(List.of(keys, fromBlock));
+        List<Object> params = new ArrayList<>(Arrays.asList(keys, fromBlock));
         if (toBlock != null) {
             params.add(toBlock);
         }
@@ -285,9 +297,9 @@ public class StandardCommands {
      * @param at block
      * @return command
      */
-    @Deprecated(forRemoval = true)
+    @Deprecated
     public RpcCall<List<ByteData>> stateQueryStorageAt(List<ByteData> keys, Hash256 at) {
-        List<Object> params = new ArrayList<>(List.of(keys));
+        List<Object> params = new ArrayList<>(Arrays.asList(keys));
         if (at != null) {
             params.add(at);
         }
